Closed
Bug 1270075
Opened 9 years ago
Closed 9 years ago
Crash in mozilla::layers::AssertD3D9Compositor
Categories
(Core :: Graphics: Layers, defect)
Core
Graphics: Layers
Tracking
()
RESOLVED
FIXED
mozilla49
Tracking | Status | |
---|---|---|
firefox49 | --- | fixed |
People
(Reporter: nical, Assigned: nical)
Details
Attachments
(1 file)
1.14 KB,
patch
|
bas.schouten
:
review+
|
Details | Diff | Splinter Review |
https://crash-stats.mozilla.com/report/index/65445611-8f70-44bc-a45a-3ed822160504
The assertion is hit just like in bug 1265282, with a low volume but for the same reason: device reset (D3D9 this time) with a fall-back to the basic compositor, but already in flight D3D9 textures end up trying to get access to a D3D9 compositor.
The MOZ_DIAGNOSTIC_ASSERT that blows up is interesting in order to get an idea of whether this can happen, and now that we know, it's not worth crashing nightly and aurora builds, so I'll replace the assertion with a gfxCriticalNote annotation as we did in the other bug.
Assignee | ||
Comment 1•9 years ago
|
||
Assignee: nobody → nical.bugzilla
Attachment #8748604 -
Flags: review?(bas)
Updated•9 years ago
|
Attachment #8748604 -
Flags: review?(bas) → review+
Comment 3•9 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox49:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
You need to log in
before you can comment on or make changes to this bug.
Description
•