Bug 1270075 - Annotate reports instead of crashing when setting an incompatible compositor (D3D9). r=Bas